--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
     <!-- dependencies : updated 2021.1.7 -->
     <com.belerweb_pinyin4j_version>2.5.1</com.belerweb_pinyin4j_version>
     <com.github.jsqlparser_jsqlparser_version>4.0</com.github.jsqlparser_jsqlparser_version>
+    <com.github.liaochong_myexcel_version>3.10.1</com.github.liaochong_myexcel_version>
     <com.google.guava_guava_version>30.1-jre</com.google.guava_guava_version>
     <com.google.zxing_version>3.4.1</com.google.zxing_version>
     <commons-io_commons-io_version>2.8.0</commons-io_commons-io_version>
@@ -132,6 +133,11 @@
         <groupId>com.github.jsqlparser</groupId>
         <artifactId>jsqlparser</artifactId>
         <version>${com.github.jsqlparser_jsqlparser_version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.github.liaochong</groupId>
+        <artifactId>myexcel</artifactId>
+        <version>${com.github.liaochong_myexcel_version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.guava</groupId>
