--- a/pom.xml
+++ b/pom.xml
@@ -120,8 +120,8 @@
   <modules>
     <module>../org.shaneking.ling</module>
     <module>../org.shaneking.roc</module>
-    <module>../org.shaneking.james</module>
     <module>../org.shaneking.leon</module>
+    <module>../org.shaneking.sunny</module>
   </modules>
 
   <dependencyManagement>
