--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.shaneking</groupId>
   <artifactId>org.shaneking</artifactId>
-  <version>0.241.1.1-SNAPSHOT</version>
+  <version>0.241.1.1</version>
   <packaging>pom</packaging>
 
   <name>org.shaneking</name>
@@ -115,7 +115,7 @@
     <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
   </properties>
 
-  <!-- mvn -N versions:set -DgenerateBackupPoms=false -DnewVersion=0.241.1.1-SNAPSHOT -->
+  <!-- mvn -N versions:set -DgenerateBackupPoms=false -DnewVersion=0.241.1.1 -->
   <!-- !!! must replace version property value in modules !!! -->
   <modules>
     <module>../org.shaneking.ling</module>
