--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.shaneking</groupId>
   <artifactId>org.shaneking</artifactId>
-  <version>0.241.1.2-SNAPSHOT</version>
+  <version>0.241.2.Friendly-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>org.shaneking</name>
@@ -108,8 +108,7 @@
     <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
   </properties>
 
-  <!-- mvn -N versions:set -DgenerateBackupPoms=false -DnewVersion=0.241.1.2-SNAPSHOT -->
-  <!-- !!! must replace version property value in modules !!! -->
+  <!-- mvn -N versions:set -DgenerateBackupPoms=false -DnewVersion=0.241.2.Friendly-SNAPSHOT -->
   <modules>
     <module>../org.shaneking.ling</module>
     <module>../org.shaneking.roc</module>
