--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
     <commons-io_commons-io_version>2.8.0</commons-io_commons-io_version>
     <commons-net_commons-net_version>3.7.2</commons-net_commons-net_version>
     <io.springfox_version>2.9.2</io.springfox_version>
+    <io.swagger_version>1.5.20</io.swagger_version>
     <!-- build plugins -->
     <org.jacoco_jacoco-maven-plugin_version>0.8.6</org.jacoco_jacoco-maven-plugin_version>
     <org.sonarsource.scanner.maven_sonar-maven-plugin_version>3.8.0.2131</org.sonarsource.scanner.maven_sonar-maven-plugin_version><!-- sonar:sonar -->
@@ -167,6 +168,11 @@
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger-ui</artifactId>
         <version>${io.springfox_version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.swagger</groupId>
+        <artifactId>swagger-annotations</artifactId>
+        <version>${io.swagger_version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
