--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.1</version>
+    <version>2.5.4</version>
   </parent>
 
   <groupId>org.shaneking</groupId>
   <artifactId>org.shaneking</artifactId>
-  <version>0.241.13.Friendly-SNAPSHOT</version>
+  <version>0.254.10.Friendly-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>org.shaneking</name>
@@ -91,38 +91,29 @@
   </ciManagement>
 
   <properties>
-    <!-- dependencies : updated 2021.1.7 -->
-    <com.belerweb_pinyin4j_version>2.5.1</com.belerweb_pinyin4j_version>
-    <com.github.jsqlparser_jsqlparser_version>4.0</com.github.jsqlparser_jsqlparser_version>
+    <!-- dependencies : updated 2021.9.5 -->
+    <com.github.jsqlparser_jsqlparser_version>4.1</com.github.jsqlparser_jsqlparser_version>
     <com.github.liaochong_myexcel_version>3.11.4</com.github.liaochong_myexcel_version>
-    <com.google.guava_guava_version>30.1-jre</com.google.guava_guava_version>
-    <com.google.zxing_version>3.4.1</com.google.zxing_version>
-    <commons-io_commons-io_version>2.8.0</commons-io_commons-io_version>
-    <commons-net_commons-net_version>3.7.2</commons-net_commons-net_version>
     <io.springfox_version>3.0.0</io.springfox_version>
-    <io.swagger_version>2.1.2</io.swagger_version>
+    <io.swagger_version>2.1.10</io.swagger_version>
     <!-- build plugins -->
-    <org.jacoco_jacoco-maven-plugin_version>0.8.6</org.jacoco_jacoco-maven-plugin_version>
-    <org.sonarsource.scanner.maven_sonar-maven-plugin_version>3.8.0.2131</org.sonarsource.scanner.maven_sonar-maven-plugin_version><!-- sonar:sonar -->
+    <org.jacoco_jacoco-maven-plugin_version>0.8.7</org.jacoco_jacoco-maven-plugin_version>
+    <org.sonarsource.scanner.maven_sonar-maven-plugin_version>3.9.0.2155</org.sonarsource.scanner.maven_sonar-maven-plugin_version><!-- sonar:sonar -->
     <sh.tak.appbundler_appbundle-maven-plugin_version>1.2.0</sh.tak.appbundler_appbundle-maven-plugin_version><!-- g2048 -->
     <!-- profile plugins -->
-    <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+    <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
   </properties>
 
-  <!-- mvn -N versions:set -DgenerateBackupPoms=false -DnewVersion=0.241.13.Friendly-SNAPSHOT -->
+  <!-- mvn -N versions:set -DgenerateBackupPoms=false -DnewVersion=0.254.10.Friendly-SNAPSHOT -->
   <modules>
     <module>../org.shaneking.ling</module>
     <module>../org.shaneking.roc</module>
     <module>../org.shaneking.leon</module>
+    <module>../org.shaneking.sunny</module>
   </modules>
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>com.belerweb</groupId>
-        <artifactId>pinyin4j</artifactId>
-        <version>${com.belerweb_pinyin4j_version}</version>
-      </dependency>
       <dependency>
         <groupId>com.github.jsqlparser</groupId>
         <artifactId>jsqlparser</artifactId>
@@ -132,31 +123,6 @@
         <groupId>com.github.liaochong</groupId>
         <artifactId>myexcel</artifactId>
         <version>${com.github.liaochong_myexcel_version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>${com.google.guava_guava_version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.zxing</groupId>
-        <artifactId>core</artifactId>
-        <version>${com.google.zxing_version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.zxing</groupId>
-        <artifactId>javase</artifactId>
-        <version>${com.google.zxing_version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-io</groupId>
-        <artifactId>commons-io</artifactId>
-        <version>${commons-io_commons-io_version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-net</groupId>
-        <artifactId>commons-net</artifactId>
-        <version>${commons-net_commons-net_version}</version>
       </dependency>
       <dependency>
         <groupId>io.springfox</groupId>
